switch to deploy on PR for testing

--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -1,10 +1,11 @@
 name: Deploy to Dev
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - "main"
+  - pull_request
+  # workflow_dispatch:
+  # push:
+  #   branches:
+  #     - "main"
 
 env:
   KUBE_CLUSTER: ${{ secrets.DEV_KUBE_CLUSTER }}
