--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: $ECR_ROLE_TO_ASSUME
+          role-to-assume: ${{ secrets.DEVELOPMENT_ECR_ROLE_TO_ASSUME }} #$ECR_ROLE_TO_ASSUME
           aws-region: eu-west-2 #${ECR_REGION}
       - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v2
