--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -8,6 +8,7 @@ on:
   #     - "main"
 
 env:
+  ENV: dev
   KUBE_CLUSTER: ${{ secrets.DEV_KUBE_CLUSTER }}
   KUBE_NAMESPACE: ${{ secrets.DEV_KUBE_NAMESPACE }}
   KUBE_CERT: ${{ secrets.DEV_KUBE_CERT }}
@@ -17,6 +18,7 @@ env:
   ECR_REPOSITORY: ${{ vars.DEVELOPMENT_ECR_REPOSITORY }}
   ECR_REGION: ${{ vars.DEVELOPMENT_ECR_REGION }}
   ECR_ROLE_TO_ASSUME: ${{ secrets.DEVELOPMENT_ECR_ROLE_TO_ASSUME }}
+
   # AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
   # AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
 
@@ -38,8 +40,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ env.ECR_ROLE_TO_ASSUME }} #${{ secrets.DEVELOPMENT_ECR_ROLE_TO_ASSUME }} #$ECR_ROLE_TO_ASSUME
-          aws-region: ${{ env.ECR_REGION }} #eu-west-2 #${ECR_REGION}
+          role-to-assume: ${{ env.ECR_ROLE_TO_ASSUME }}
+          aws-region: ${{ env.ECR_REGION }}
       - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v2
         id: login-ecr
@@ -57,7 +59,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Authenticate to the cluster
         run: |
           echo "${KUBE_CERT}" > ca.crt
@@ -71,7 +72,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ needs.build-push.outputs.ecr-registry }}
         run: |
-          helm upgrade operations-engineering-example-dev \
+          helm upgrade operations-engineering-example-${ENV} \
             helm/operations-engineering-example \
             --install \
             --force \
@@ -80,7 +81,7 @@ jobs:
             --namespace ${KUBE_NAMESPACE} \
             --set image.tag=${IMAGE_TAG} \
             --set image.repository=${ECR_REGISTRY}/${ECR_REPOSITORY} \
-            --set ingress.hosts={operations-engineering-example-dev.cloud-platform.service.justice.gov.uk}
+            --set ingress.hosts={operations-engineering-example-${ENV}.cloud-platform.service.justice.gov.uk}
 
         # --set application.auth0ClientId=${AUTH0_CLIENT_ID} \
         # --set application.auth0ClientSecret=${AUTH0_CLIENT_SECRET} \
