--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -59,7 +59,7 @@ jobs:
           docker build -t ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG} .
           docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}
 
-  deploy-to-$ENV:
+  deploy-to-prod:
     needs: build-push
     runs-on: ubuntu-latest
     container: alpine/k8s:1.23.17
