--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -4,11 +4,9 @@ permissions:
   contents: write
 
 on:
-  - pull_request
-# on:
-#   push:
-#     tags:
-#       - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
+  push:
+    tags:
+      - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
 
 env:
   ENV: prod
@@ -40,10 +38,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      # - name: Release
-      #   uses: softprops/action-gh-release@v1
-      #   with:
-      #     generate_release_notes: true
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
