--- a/helm/operations-engineering-example/values.yaml
+++ b/helm/operations-engineering-example/values.yaml
@@ -9,11 +9,9 @@ favourite:
 
 # replicaCount: 1
 
-# image:
-#   repository: nginx
-#   pullPolicy: IfNotPresent
-#   # Overrides the image tag whose default is the chart appVersion.
-#   tag: ""
+image: # These are interpolated at runtime in deploy workflows
+  repository: ""
+  tag: ""
 
 # imagePullSecrets: []
 # nameOverride: ""
@@ -45,21 +43,23 @@ favourite:
 #   type: ClusterIP
 #   port: 80
 
-# ingress:
-#   enabled: false
-#   className: ""
-#   annotations: {}
-#     # kubernetes.io/ingress.class: nginx
-#     # kubernetes.io/tls-acme: "true"
-#   hosts:
-#     - host: chart-example.local
-#       paths:
-#         - path: /
-#           pathType: ImplementationSpecific
-#   tls: []
-#   #  - secretName: chart-example-tls
-#   #    hosts:
-#   #      - chart-example.local
+ingress:
+  identifier: exmaple-app-giraffe-green
+  namespace: operations-engineering-example-dev
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 # resources: {}
 #   # We usually recommend not to specify default resources and to leave this as a conscious
