--- a/helm/operations-engineering-example/values.yaml
+++ b/helm/operations-engineering-example/values.yaml
@@ -1,13 +1,8 @@
-favourite:
-  drink: cHiCoRy
-  food: popadums
-  #snack: mango
-
 # # Default values for operations-engineering-example.
 # # This is a YAML-formatted file.
 # # Declare variables to be passed into your templates.
 
-# replicaCount: 1
+replicaCount: 1
 
 image: # These are interpolated at runtime in deploy workflows
   repository: ""
@@ -44,19 +39,19 @@ image: # These are interpolated at runtime in deploy workflows
 #   port: 80
 
 ingress:
-  identifier: example-ingress-operations-engineering-example-dev-green
-  namespace: operations-engineering-example-dev
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
+  identifier: ""
+  host: ""
+  # enabled: false
+  # className: ""
+  # annotations: {}
+  #   # kubernetes.io/ingress.class: nginx
+  #   # kubernetes.io/tls-acme: "true"
+  # hosts:
+  #   - host: chart-example.local
+  #     paths:
+  #       - path: /
+  #         pathType: ImplementationSpecific
+  # tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
