--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -81,7 +81,7 @@ jobs:
             --namespace ${KUBE_NAMESPACE} \
             --set image.tag=${IMAGE_TAG} \
             --set image.repository=${ECR_REGISTRY}/${ECR_REPOSITORY} \
-            --set ingress.host=operations-engineering-example-${ENV}.cloud-platform.service.justice.gov.uk
+            --set ingress.host=operations-engineering-example-${ENV}.cloud-platform.service.justice.gov.uk \
             --set ingress.identifier=example-ingress-operations-engineering-example-${ENV}-green
 
         # --set application.auth0ClientId=${AUTH0_CLIENT_ID} \
