--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ botocore~=1.29.159
 flask~=2.3.3
 flask-cors
 govuk-frontend-jinja
-#gunicorn
+gunicorn
 python-dotenv~=1.0.0
 requests~=2.31.0
 pytest~=7.4.2
