--- a/helm/operations-engineering-example/templates/ingress.yml
+++ b/helm/operations-engineering-example/templates/ingress.yml
@@ -20,4 +20,4 @@ spec:
               service:
                 name: example-service
                 port:
-                  number: 8080
+                  number: {{ .Values.port }}
