--- a/helm/operations-engineering-example/templates/service.yml
+++ b/helm/operations-engineering-example/templates/service.yml
@@ -7,5 +7,5 @@ spec:
     app: example
   ports:
     - name: https
-      port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+      port: {{ .Values.port }}
+      targetPort: {{ .Values.port }}
