fix target port (local port in contianer)

--- a/helm/operations-engineering-example/values.yaml
+++ b/helm/operations-engineering-example/values.yaml
@@ -12,6 +12,7 @@ image: # These are interpolated at runtime in deploy workflows
   tag: ""
 
 port: 4567
+targetPort: 5000
 
 ingress:
   identifier: ""
