--- a/helm/operations-engineering-example/templates/service.yml
+++ b/helm/operations-engineering-example/templates/service.yml
@@ -8,4 +8,4 @@ spec:
   ports:
     - name: https
       port: {{ .Values.port }}
-      targetPort: {{ .Values.port }}
+      targetPort: {{ .Values.targetPort }}
