--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -87,7 +87,9 @@ jobs:
             --set replicaCount=3 \
             --set image.tag=${IMAGE_TAG} \
             --set image.repository=${ECR_REGISTRY}/${ECR_REPOSITORY} \
-            --set ingress.hosts={operations-engineering-example-${ENV}.cloud-platform.service.justice.gov.uk}
+            --set ingress.host=operations-engineering-example-${ENV}.cloud-platform.service.justice.gov.uk \
+            --set ingress.identifier=example-ingress-operations-engineering-example-${ENV}-green
+
   
         # --set application.auth0ClientId=${AUTH0_CLIENT_ID} \
         # --set application.auth0ClientSecret=${AUTH0_CLIENT_SECRET} \
