--- a/helm/operations-engineering-example/templates/deployment.yml
+++ b/helm/operations-engineering-example/templates/deployment.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: example
 spec:
-  replicas: 3
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: example
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: example
-          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           ports:
-            - containerPort: 8080
+            - containerPort: {{ .Values.port }}
