--- a/helm/operations-engineering-example/templates/ingress.yml
+++ b/helm/operations-engineering-example/templates/ingress.yml
@@ -3,15 +3,15 @@ kind: Ingress
 metadata:
   name: example-ingress
   annotations:
-    external-dns.alpha.kubernetes.io/set-identifier: example-ingress-${NAMESPACE}-green
+    external-dns.alpha.kubernetes.io/set-identifier: {{ .Values.ingress.identifier | quote }}
     external-dns.alpha.kubernetes.io/aws-weight: "100"
 spec:
   ingressClassName: default
   tls:
     - hosts:
-        - ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
+        - {{ .Values.ingress.host }}
   rules:
-    - host: ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
           - path: /
@@ -20,4 +20,4 @@ spec:
               service:
                 name: example-service
                 port:
-                  number: 8080
+                  number: {{ .Values.port }}
