--- a/helm/operations-engineering-example/templates/service.yml
+++ b/helm/operations-engineering-example/templates/service.yml
@@ -7,5 +7,5 @@ spec:
     app: example
   ports:
     - name: https
-      port: 8080
-      targetPort: 8080
+      port: {{ .Values.port }}
+      targetPort: {{ .Values.targetPort }}
