--- a/helm/operations-engineering-example/values.yaml
+++ b/helm/operations-engineering-example/values.yaml
@@ -1,65 +1,41 @@
-favourite:
-  drink: cHiCoRy
-  food: popadums
-  #snack: mango
-
 # # Default values for operations-engineering-example.
 # # This is a YAML-formatted file.
 # # Declare variables to be passed into your templates.
 
-# replicaCount: 1
+replicaCount: 1
 
-# image:
-#   repository: nginx
-#   pullPolicy: IfNotPresent
-#   # Overrides the image tag whose default is the chart appVersion.
-#   tag: ""
+env: ""
 
-# imagePullSecrets: []
-# nameOverride: ""
-# fullnameOverride: ""
 
-# serviceAccount:
-#   # Specifies whether a service account should be created
-#   create: true
-#   # Annotations to add to the service account
-#   annotations: {}
-#   # The name of the service account to use.
-#   # If not set and create is true, a name is generated using the fullname template
-#   name: ""
+image: # These are interpolated at runtime in deploy workflows
+  repository: ""
+  tag: ""
 
-# podAnnotations: {}
+port: 1551
+targetPort: 1551 # 5000 # reports has this matching port
 
-# podSecurityContext: {}
-#   # fsGroup: 2000
+ingress:
+  identifier: ""
+  host: ""
 
-# securityContext: {}
-#   # capabilities:
-#   #   drop:
-#   #   - ALL
-#   # readOnlyRootFilesystem: true
-#   # runAsNonRoot: true
-#   # runAsUser: 1000
+service:
+  type: ClusterIP
 
-# service:
-#   type: ClusterIP
-#   port: 80
 
-# ingress:
-#   enabled: false
-#   className: ""
-#   annotations: {}
-#     # kubernetes.io/ingress.class: nginx
-#     # kubernetes.io/tls-acme: "true"
-#   hosts:
-#     - host: chart-example.local
-#       paths:
-#         - path: /
-#           pathType: ImplementationSpecific
-#   tls: []
-#   #  - secretName: chart-example-tls
-#   #    hosts:
-#   #      - chart-example.local
+  # enabled: false
+  # className: ""
+  # annotations: {}
+  #   # kubernetes.io/ingress.class: nginx
+  #   # kubernetes.io/tls-acme: "true"
+  # hosts:
+  #   - host: chart-example.local
+  #     paths:
+  #       - path: /
+  #         pathType: ImplementationSpecific
+  # tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 # resources: {}
 #   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -85,3 +61,28 @@ favourite:
 # tolerations: []
 
 # affinity: {}
+# imagePullSecrets: []
+# nameOverride: ""
+# fullnameOverride: ""
+
+# serviceAccount:
+#   # Specifies whether a service account should be created
+#   create: true
+#   # Annotations to add to the service account
+#   annotations: {}
+#   # The name of the service account to use.
+#   # If not set and create is true, a name is generated using the fullname template
+#   name: ""
+
+# podAnnotations: {}
+
+# podSecurityContext: {}
+#   # fsGroup: 2000
+
+# securityContext: {}
+#   # capabilities:
+#   #   drop:
+#   #   - ALL
+#   # readOnlyRootFilesystem: true
+#   # runAsNonRoot: true
+#   # runAsUser: 1000
