--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 #authlib~=1.2.1
-boto3~=1.26.159
-botocore~=1.29.159
+boto3~=1.29.4 # 1.26.159
+botocore~=1.32.4 # 1.29.159
 #cryptography~=41.0.3
-flask~=2.3.3
-flask-cors
-govuk-frontend-jinja
-gunicorn
+flask~=3.0.0 # 2.3.3
+flask-cors~=4.0.0
+govuk-frontend-jinja~=2.7.0
+gunicorn~=21.2.0
 python-dotenv~=1.0.0
 requests~=2.31.0
-pytest~=7.4.2
+pytest~=7.4.3
 #setuptools~=68.0.0
 Jinja2~=3.1.2
