--- a/helm/operations-engineering-example/values.yaml
+++ b/helm/operations-engineering-example/values.yaml
@@ -12,7 +12,7 @@ image: # These are interpolated at runtime in deploy workflows
   tag: ""
 
 port: 1551
-targetPort: 1551 # 5000 # reports has this matching port
+targetPort: 1551
 
 ingress:
   identifier: ""
