--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,56 @@
-.env
-.venv
-.terraform/
-coverage/
-venv/
-env/
 .DS_STORE
 .vscode
 *.code-workspace
 *.sha256
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+### Terraform ###
+.terraform/
 terraform.tfstate
+
+### GOV.UK Frontend ###
+application/static/*
+govuk_components*
+
+### Flask ###
+instance/*
+!instance/.gitignore
+.webassets-cache
+
+### Flask.Python Stack ###
+# Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+build
+lib/
+lib64/
+var/
+wheels/
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+coverage/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
