--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -9,6 +9,8 @@ on:
       - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
 
 env:
+  TEAM_NAME: operations-engineering
+  NAME: example
   ENV: prod
   KUBE_CLUSTER: ${{ secrets.PROD_KUBE_CLUSTER }}
   KUBE_NAMESPACE: ${{ secrets.PROD_KUBE_NAMESPACE }}
@@ -70,8 +72,8 @@ jobs:
         env:
           ECR_REGISTRY: ${{ needs.build-push.outputs.ecr-registry }}
         run: |
-          helm upgrade operations-engineering-example-${ENV} \
-            helm/operations-engineering-example \
+          helm upgrade ${TEAM_NAME}-${NAME}-${ENV} \
+            helm/${TEAM_NAME}-${NAME} \
             --install \
             --atomic \
             --force \
@@ -80,5 +82,5 @@ jobs:
             --set replicaCount=3 \
             --set image.tag=${IMAGE_TAG} \
             --set image.repository=${ECR_REGISTRY}/${ECR_REPOSITORY} \
-            --set ingress.host=operations-engineering-example-${ENV}.cloud-platform.service.justice.gov.uk \
-            --set ingress.identifier=example-ingress-operations-engineering-example-${ENV}-green
+            --set ingress.host=${TEAM_NAME}-${NAME}-${ENV}.cloud-platform.service.justice.gov.uk \
+            --set ingress.identifier=${NAME}-ingress-${TEAM_NAME}-${NAME}-${ENV}-green
