--- a/helm/operations-engineering-example/templates/ingress.yml
+++ b/helm/operations-engineering-example/templates/ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: example-ingress
+  name:  {{ .Values.name }}-ingress
   annotations:
     external-dns.alpha.kubernetes.io/set-identifier: {{ .Values.ingress.identifier | quote }}
     external-dns.alpha.kubernetes.io/aws-weight: "100"
@@ -18,6 +18,6 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: example-service
+                name:  {{ .Values.name }}-service
                 port:
                   number: {{ .Values.port }}
