--- a/helm/operations-engineering-example/templates/service.yml
+++ b/helm/operations-engineering-example/templates/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: example-service
+  name:  {{ .Values.name }}-service
 spec:
   selector:
-    app: example
+    app:  {{ .Values.name }}
   ports:
     - name: https
       port: {{ .Values.port }}
