hardcode Chart.yaml

--- a/helm/operations-engineering-example/Chart.yaml
+++ b/helm/operations-engineering-example/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name:  {{ .Values.teamName }}-{{ .Values.name }}
+name:  operations-engineering-example
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
